<resources>
    <string name="app_name">crm_test</string>
    <string name="crm_test_application">CRM test application!</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sing_in">Sign In</string>
    <string name="register_string">Register now</string>
    <string name="register">Register</string>
    <string name="new_login">New login</string>
    <string name="new_password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="rest_url">http://192.168.1.231:8080</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="def_name">Ivan Ivanov</string>
    <string name="def_email">IvanIvanov@gmail.com</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="options">Options</string>
    <string name="setings">Setings</string>
    <string name="about_us">About us</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_pic">https://pbs.twimg.com/profile_images/1045580248467886080/_uwwJdr3_400x400.jpg</string>
    <string name="find_us">Find us</string>
    <string name="choose_procedure">Choose procedure</string>
    <string name="choose_doctor">Choose doctor</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="birthday">yyyy-mm-dd</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="about">О стоматологии</string>
    <string name="uri_about">https://medicina-top.ru/wp-content/uploads/2017/12/stomatologiya-300-300.jpg</string>
    <string name="welcome">Welcome to us\nChoose options</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="yours_procedure">Yours Procedure</string>
    <string name="rasp_info">Procedure not found</string>
    <string name="not_found_any_tasks">Not found any tasks</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="record_media">Record Media</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="microphone">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="gallery">Gallery</string>
    <string name="sound">Sound</string>
</resources>
