<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_edit"
                android:icon="@drawable/ic_sync_black_24dp"
                android:title="@string/edit_profile"/>
        <item
                android:id="@+id/nav_procedure"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/choose_procedure"/>
        <item
                android:id="@+id/nav_doctor"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/choose_doctor"/>
        <item
                android:id="@+id/nav_find_us"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/find_us"/>
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/setings"/>
            <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about_us"/>
        </menu>
    </item>

</menu>
