<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/edit_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".nav_fragments.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image"
            android:paddingTop="5dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:civ_border_color="#FF000000" android:layout_marginStart="50dp" android:layout_marginTop="30dp"/>

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" android:layout_marginTop="175dp" android:layout_marginStart="50dp"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/surname" android:layout_marginTop="140dp" android:layout_marginStart="50dp"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/patronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/patronymic" android:layout_marginTop="210dp" android:layout_marginStart="50dp"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthday" android:layout_marginTop="245dp" android:layout_marginStart="50dp"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email" android:layout_marginTop="280dp" android:layout_marginStart="50dp"
            android:textSize="24sp"/>
    <Button
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/edit"
            android:layout_marginTop="400dp" android:layout_marginStart="50dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/save"
            android:layout_marginTop="400dp" android:layout_marginStart="50dp"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="7"
            android:id="@+id/edit_name"
            android:layout_marginStart="50dp"
            android:layout_marginTop="175dp"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/surname"
            android:ems="7"
            android:id="@+id/edit_surname"
            android:layout_marginStart="50dp"
            android:layout_marginTop="140dp"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/patronymic"
            android:ems="7"
            android:id="@+id/edit_patronymic"
            android:layout_marginStart="50dp"
            android:layout_marginTop="210dp"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="7"
            android:id="@+id/edit_email"
            android:layout_marginStart="50dp"
            android:layout_marginTop="280dp"
            android:visibility="invisible"/>
</FrameLayout>