<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".nav_fragments.RecordMediaFragment">


    <Button
            android:text="@string/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/video" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/photo" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.24"/>
    <Button
            android:text="@string/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/microphone"/>
    <Button
            android:text="@string/microphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/microphone" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="132dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>