<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".nav_fragments.SettingsFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/rasp_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="20sp"/>
    <TextView
            android:text="@string/not_found_any_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rasp_info"
            app:layout_constraintTop_toBottomOf="@+id/rasp_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" android:textSize="18sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/delete_rasp"
            android:layout_gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.026" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/delete_acc"
            android:visibility="gone"/>

    <Button
            android:text="@string/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/delete_acc" android:layout_gravity="bottom"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.031"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
    />
    <ListView
            android:id="@+id/list_tasks"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/delete_rasp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rasp_info"
            android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>